# mele_social_website_1

./: pyproject.toml
bookmarks/: db.sqlite3
bookmarks/account/: admin.py  forms.py  models.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: dashboard.html  edit.html  login.html  register.html  register_done.html
bookmarks/account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
bookmarks/bookmarks/: settings.py  urls.py
