[tool.poetry]
name = "django-4-mele-social-website"
version = "0.1.0"
description = ""
authors = ["zaberov.dv <zaberov.dv@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
